--- a/config.json
+++ b/config.json
@@ -3,3 +3,5 @@ git clone https://github.com/peterthehan/create-discord-bot.git && cd create-dis
 {
   "TOKEN": "NjU0MjUxNzE2MzA4NjMxNTcz.XfC6wA.v7H7xnUpvfFTt1CqUIZoBFBj0sQ"
 }
+
+npm start
